name:                kalyn
version:             0
build-type:          Simple
cabal-version:       >= 1.12
executable kalyn
  main-is:             Main.hs
  other-modules:       Assembler, Assembly, Linker, Util
  build-depends:       base, bytestring, containers, unix
  default-language:    Haskell2010
